Fix header decoration, fonts, line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-﻿﻿html {
-    font-family: kepler;  
-}
-
-body {
-    font-size: 1.3rem;
+﻿body {
+    font-family: 'Times New Roman';
+    font-size: 1.4rem;
     background-color: #fffbeb;
-    
+    line-height: 2.4rem;
 }
 
 a:link {
@@ -24,12 +21,21 @@ a:hover {
     background-color: #fff96e;
 }
 
-h3 {
-    font-size: 1.9rem;
-    font-weight: 400;
+h2 {
+    font-family: 'Hahmlet', serif;
+    font-size: 2rem;
+    font-weight: 500;
     border-bottom: 1px solid gray;
     padding: 5px;
     max-width: 40rem;
+}
+
+h3 {
+    font-family: 'Hahmlet', serif;
+    font-size: 1.7rem;
+    font-weight: 500;
+    line-height: 0.2rem;
+    margin-top: 2.7rem;
 }
 
 h4 {
@@ -46,18 +52,17 @@ h4 a{
     text-decoration: none;
 }
 
-header{
+header {
     margin-top: 40px;
     margin-left: 40px;
 }
 
 .container {
     padding: 2rem;
-    margin-left: 280px;
+    margin-left: auto;
     max-width: 94rem;
 }
 
 ul.ba {
     list-style-type: none;
 }
-
